--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,4 @@
-
+OPENAI_API_KEY = "Dein_OpenAI_API_Key"
+NEO4J_URI = "neo4j+s://Dein_Neo4j_Host"
+NEO4J_USERNAME = "Dein_Neo4j_Benutzername"
+NEO4J_PASSWORD = "Dein_Neo4j_Passwort"
