--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ streamlit==1.40.1
 python-dotenv==1.0.1
 langchain==0.3.7
 langchain-openai==0.2.8
-neo4j==5.26.0
+langchain-community==0.3.7
 Pillow>=9.0.0
